# Tools

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: __init.py
src/core/: __init__.py  base_gui.py  base_tool.py  plugin_manager.py
src/crawler/: __init__.py  sublink_crawler.py
src/gui/: __init__.py  launcher.py  main_window.py
src/tools/crawler/: __init__.py  gui.py  sublink_crawler.py  tool.py
src/tools/file_content_extractor/: __init__.py  config.json  extractor.py  gui.py  tool.py
src/tools/git_diff/: __init__.py  config.json  gui.py  tool.py
src/tools/mdblock/: __init__.py  block_extractor.py  gui.py  tool.py
src/tools/reddit_reducer/: __init__.py  gui.py  reducer.py  tool.py
src/tools/tag_tools/: __init__.py  config.json  extractor.py  extractor_gui.py  gui.py  renamer.py  renamer_gui.py  tool.py  wrapper.py  wrapper_gui.py
src/utils/: __init__.py  url_utils.py
