[tool.poetry]
name = "tools"
version = "0.1.0"
description = "Python-based toolbox application with plugin architecture"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
customtkinter = "5.2.0"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
lxml = "4.9.3"
urllib3 = "2.0.7"
pyperclip = "1.8.2"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"